<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/noodlesbackground"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".FoodCart">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="657dp"

        android:outlineProvider="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="1dp">


        <TextView
            android:id="@+id/textView38"
            android:layout_width="202dp"
            android:layout_height="25dp"
            android:text="@string/NoodlesType5"
            android:textColor="#000000"
            android:textSize="13sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="218dp" />

        <Button
            android:id="@+id/button16"
            android:layout_width="93dp"
            android:layout_height="37dp"
            android:text="@string/Button3"
            tools:layout_editor_absoluteX="300dp"
            tools:layout_editor_absoluteY="208dp" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="142dp"
            android:layout_height="27dp"
            android:text="@string/Noodlesprice5"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="216dp" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="205dp"
            android:layout_height="28dp"
            android:text="@string/NoodlesType4"
            android:textColor="#000000"
            android:textSize="13sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="183dp" />

        <Button
            android:id="@+id/button15"
            android:layout_width="93dp"
            android:layout_height="37dp"
            android:text="@string/Button3"
            tools:layout_editor_absoluteX="300dp"
            tools:layout_editor_absoluteY="174dp" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="142dp"
            android:layout_height="27dp"
            android:text="@string/Noodlesprice4"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="184dp" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="205dp"
            android:layout_height="26dp"
            android:text="@string/NoodlesType3"
            android:textColor="#000000"
            android:textSize="13sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="150dp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="93dp"
            android:layout_height="37dp"
            android:text="@string/Button3"
            tools:layout_editor_absoluteX="300dp"
            tools:layout_editor_absoluteY="140dp" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="142dp"
            android:layout_height="27dp"
            android:text="@string/Noodlesprice3"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="149dp" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="198dp"
            android:layout_height="25dp"
            android:text="@string/NoodlesType2"
            android:textColor="#000000"
            android:textSize="13sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="114dp" />

        <Button
            android:id="@+id/button13"
            android:layout_width="93dp"
            android:layout_height="37dp"
            android:text="@string/Button3"
            tools:layout_editor_absoluteX="300dp"
            tools:layout_editor_absoluteY="105dp" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="142dp"
            android:layout_height="27dp"
            android:text="@string/Noodlesprice2"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="112dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="197dp"
            android:layout_height="25dp"
            android:text="@string/NoodlesType1"
            android:textColor="#000000"
            android:textSize="13sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="79dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="93dp"
            android:layout_height="37dp"
            android:text="@string/Button3"
            tools:layout_editor_absoluteX="300dp"
            tools:layout_editor_absoluteY="69dp" />


        <TextView
            android:id="@+id/textView16"
            android:layout_width="142dp"
            android:layout_height="27dp"
            android:text="@string/Noodlesprice1"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="78dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/category2"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SearchView
            android:layout_width="226dp"
            android:layout_height="41dp"
            android:background="#00BCD4"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



